# kml-places-suite

./: .gitignore  AGENTS.md  Directory.Build.props  KmlSuite.slnx  NuGet.Config  build-master-lists.ps1  master-list-config.example.json  resolve-research-points.ps1  run-workflow.ps1
ArcGeometryExtractor.Console/: AGENTS.md  ArcExtractionStages.cs  ArcGeometryExtractor.Console.csproj  Program.cs
KmlGenerator.Api/: AGENTS.md  KmlGenerator.Api.csproj  Program.cs
KmlGenerator.Console/: AGENTS.md  KmlGenerator.Console.csproj  Program.cs
KmlGenerator.Core/: AGENTS.md  KmlGenerator.Core.csproj
KmlGenerator.Tests/: AGENTS.md  ArcGeometryExtractorRunnerTests.cs  KmlApiTests.cs  KmlConsoleRunnerTests.cs  KmlGenerationServiceTests.cs  KmlGenerator.Tests.csproj  KmlTilerRunnerTests.cs  LocationAssemblerRunnerTests.cs  MasterListBuilderRunnerTests.cs  ResearchPointResolverRunnerTests.cs  StubHttpMessageHandler.cs
KmlGeometry.Native/: CMakeLists.txt
KmlGeometry.Native/src/: kml_geometry_native.cpp  kml_geometry_native.h
KmlSuite.Analyzers/: KmlSuite.Analyzers.csproj  KmlSuiteArchitectureAnalyzer.cs
KmlTiler.Console/: AGENTS.md  IKmlTilerApp.cs  KmlTiler.Console.csproj  Program.cs
LocationAssembler.Console/: AGENTS.md  ILocationAssemblerApp.cs  LocationAssembler.Console.csproj  Program.cs
MasterListBuilder.Console/: AGENTS.md  Program.cs
PlacesGatherer.Console.Tests/: AGENTS.md  GooglePlacesClientTests.cs  GooglePlacesLiveIntegrationTests.cs  LocalConfigurationSecretProviderTests.cs  PlacesGatherer.Console.Tests.csproj  PlacesGathererRunnerTests.cs  (+1 more)
(+191 files in other folders)
